--- a/css/main.scss
+++ b/css/main.scss
@@ -53,6 +53,7 @@ $heading-color:#200542;
             display:flex;
             justify-content: center;
             align-items:center;
+           
            .home-content{
 
             display:flex;
@@ -61,6 +62,8 @@ $heading-color:#200542;
             width:50%;
             height:100%;
             flex-direction: column;
+            // backdrop-filter:blur(20px);
+            // background: rgba(194, 194, 194, 0.575);
             .logo{
                 height:10%;
                 position:absolute;
@@ -165,10 +168,11 @@ $heading-color:#200542;
         }
         P{
             width:70%;
-            font-size:20px;
+            font-size:16px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans;
             text-align: justify;
             font-weight: 500;
+            margin:30px;
 
         }
         .about-services{
@@ -210,9 +214,10 @@ $heading-color:#200542;
 
               }
               p{
-                  font-size:12px;
+                  font-size:16px;
                   text-align:center;
                   width:90%;
+
               }
               &:hover{
 
@@ -224,5 +229,63 @@ $heading-color:#200542;
 
             }
         }
+
+       
+    }
+
+    .domains{
+
+        display:flex;
+        justify-content:flex-start;
+        align-items:center;
+        
+        flex-direction: column;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        h1{
+            
+            font-size: 60px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color:rgb(75, 0, 110);
+            
+        }
+        p{
+            font-size: 16px;;
+            width:50%;
+            
+            
+        }
+        .domain-cards{
+
+            width:70%;
+            height:auto;
+           
+            display:flex;
+            justify-content:space-around;
+            align-items:center;
+            flex-wrap: wrap;
+            .subdomains{
+
+                height:200px;
+                width:200px;
+               color: rgb(41, 41, 41);
+                margin:30px;
+                display:flex;
+                flex-direction: column;
+                justify-content:center;
+                align-items:center;
+
+                img{
+                    width:100px;
+
+                }
+                h2{
+                    text-align:center;
+                    color: rgb(84, 84, 84);
+                }
+
+            }
+
+        }
+
     }
 }
