--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  -ms-scroll-snap-type: proximity;
+      scroll-snap-type: proximity;
 }
 
 /* width */
@@ -248,12 +250,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: auto;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -268,7 +271,7 @@ body {
 }
 
 .main-container .domains p {
-  font-size: 16px;
+  font-size: 20px;
   width: 50%;
 }
 
@@ -285,12 +288,16 @@ body {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-top: 30px;
 }
 
 .main-container .domains .domain-cards .subdomains {
   height: 200px;
   width: 200px;
+  background: whitesmoke;
+  padding: 20px;
   color: #292929;
+  border-radius: 5px;
   margin: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -314,5 +321,68 @@ body {
 .main-container .domains .domain-cards .subdomains h2 {
   text-align: center;
   color: #545454;
+}
+
+.main-container footer {
+  height: auto;
+  width: 100vw;
+  background: #161616;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #b5b5b5;
+  position: relative;
+  bottom: 0;
+}
+
+.main-container footer .footer-others {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.main-container footer .footer-others .footer-logo {
+  height: 100px;
+  margin: 30px;
+}
+
+.main-container footer .footer-others .contactUs {
+  font-size: 20px;
+}
+
+.main-container footer .footer-others .contactUs a {
+  text-decoration: none;
+  -webkit-text-emphasis: none;
+          text-emphasis: none;
+  color: inherit;
+}
+
+.main-container footer .footer-others .contactUs a img {
+  -webkit-filter: invert(100);
+          filter: invert(100);
+  height: 40px;
+  margin: 20px;
+  opacity: 0.5;
 }
 /*# sourceMappingURL=main.css.map */
