--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,7 @@
 body{
     margin:0;
     padding:0;
+    scroll-snap-type: proximity;
     
 }
 
@@ -236,9 +237,9 @@ $heading-color:#200542;
     .domains{
 
         display:flex;
-        justify-content:flex-start;
+        justify-content:center;
         align-items:center;
-        
+        height:auto;;
         flex-direction: column;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         h1{
@@ -249,7 +250,7 @@ $heading-color:#200542;
             
         }
         p{
-            font-size: 16px;;
+            font-size: 20px;;
             width:50%;
             
             
@@ -263,11 +264,16 @@ $heading-color:#200542;
             justify-content:space-around;
             align-items:center;
             flex-wrap: wrap;
+            margin-top:30px;
             .subdomains{
 
                 height:200px;
                 width:200px;
+                background: rgb(245, 245, 245);
+                padding:20px;
                color: rgb(41, 41, 41);
+              
+               border-radius: 5px;;
                 margin:30px;
                 display:flex;
                 flex-direction: column;
@@ -285,6 +291,57 @@ $heading-color:#200542;
 
             }
 
+        }
+
+    }
+
+    footer{
+
+        height:auto;;
+        width:100vw;
+        background: rgb(22, 22, 22);
+        display:flex;
+        flex-wrap: wrap;
+        justify-content:center;
+        align-items:center;
+        flex-direction: column;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color:rgb(181, 181, 181);
+        position:relative;
+        bottom:0;
+        
+        .footer-others{
+
+            width: 90%;;
+            display: flex;
+            justify-content:space-around;
+            align-items:center;
+            flex-wrap: wrap;
+            
+
+            .footer-logo{
+                height:100px;
+                margin:30px;
+            }
+
+            .contactUs{
+
+                font-size: 20px;;
+                
+               a{
+                text-decoration: none;
+                text-emphasis: none;;
+                color:inherit;
+
+                img{
+
+                    filter: invert(100);
+                    height:40px;
+                    margin:20px;
+                    opacity: 0.5;
+                }
+               }
+            }
         }
 
     }
