--- a/css/main.scss
+++ b/css/main.scss
@@ -2,6 +2,7 @@ body{
     margin:0;
     padding:0;
     scroll-snap-type: proximity;
+    font-family :'Poppins',san-serif;
     
 }
 
@@ -76,14 +77,15 @@ $heading-color:#200542;
             h1{
                 color:#ffffff;
                 font-size:80px;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-family: 'Poppins', sans-serif;
+
                 margin-left:50px;
                 line-height: 10px;
                 
             }
             p{
                 color:white;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-family: 'Poppins', sans-serif;
                 width:80%;
                 font-size:30px;
                 margin-left:50px;
@@ -110,10 +112,9 @@ $heading-color:#200542;
                     transform:scale(1.1);
                 }
                 }
-       
-       
+
         }
-       
+    
         .home-contentTwo{
 
             width:45%;
@@ -123,7 +124,7 @@ $heading-color:#200542;
             }
 
         }
-       }
+    }
         
     }
     .about-section{
@@ -158,8 +159,8 @@ $heading-color:#200542;
 
         h1{
 
-            font-size: 60px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 55px;
+            font-family: 'Poppins', sans-serif;
             color:rgb(75, 0, 110);
             // text-decoration: underline 3px rgba(101, 0, 216, 0.316) ;
             
@@ -170,7 +171,7 @@ $heading-color:#200542;
         P{
             width:70%;
             font-size:16px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans;
+            font-family: 'Poppins', sans-serif;
             text-align: justify;
             font-weight: 500;
             margin:30px;
@@ -244,7 +245,7 @@ $heading-color:#200542;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         h1{
             
-            font-size: 60px;
+            font-size: 55px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color:rgb(75, 0, 110);
             
@@ -292,6 +293,167 @@ $heading-color:#200542;
             }
 
         }
+
+    }
+
+    .partners {
+
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height:auto;
+        h1{
+            font-size: 55px;
+            font-family: 'Poppins', sans-serif;
+            color:rgb(75, 0, 110);
+        }
+
+    }
+
+
+    .team{
+        background: rgb(255, 255, 255);
+        display:flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        font-family: 'Poppins', sans-serif;
+        height:auto;
+        padding:30px;
+        .chinmay{
+
+            height:300px;
+            width:60%;
+           
+            display:flex;
+            justify-content: space-around;
+            align-items: center;
+            .avatar{
+                height:250px;
+
+            }
+            div.description{
+                width:70%;
+                height:100%;
+                .title{
+
+                   
+                    
+
+                    h1{
+                        font-size: 35px;
+                        font-weight: 700;
+                        margin-top:20px;
+                        color:#30006b;
+                    }
+                    h4{
+                        font-size:20px;
+                        margin-top:-20px;
+                        color: #555;
+                        
+                    }
+
+                }
+                p{
+                    text-align:justify;
+                    color: #000;
+                    font-size:16px;
+                    font-weight: 500;
+                }
+               
+            }
+
+        }
+        .Riddhi{
+
+            height:320px;
+            width:60%;
+            
+            display:flex;
+            justify-content: space-around;
+            align-items: center;
+            .avatar{
+                height:250px;
+
+            }
+            div.description{
+                width:70%;
+                height:100%;
+                .title{
+
+                   
+                    
+
+                    h1{
+                        font-size: 35px;
+                        font-weight: 700;
+                        margin-top:20px;
+                        color:#30006b;
+                    }
+                    h4{
+                        font-size:20px;
+                        margin-top:-20px;
+                        color: #555;
+                        
+                    }
+
+                }
+                p{
+                    text-align:justify;
+                    color: #000;
+                    font-size:16px;
+                    font-weight: 500;
+                }
+               
+            }
+        }
+        .theTeam{
+
+            height:100vh;
+            display:flex;
+            margin-top:20px;
+            justify-content: center;
+            align-items: flex-start;
+            flex-wrap: wrap;
+            width:80%;
+            margin:auto;
+            
+
+            .member{
+                height:320px;;
+                width:250px;
+                text-align: center;
+                display:flex;
+                justify-content: space-around;
+                align-items: center;
+                flex-direction: column;
+                background: rgb(212, 212, 212);
+                border-radius: 20px;;
+                margin:30px;
+                .memavatar{
+                    height:200px;
+                    margin:10px;
+                }
+               .member-title{
+
+                h2{
+                    font-size:22px;;
+                    line-height:10px;
+                }
+                h3{
+                    font-size:20px;;
+                    line-height:15px;
+                }
+                p{
+                    font-size:18px;;
+                    line-height:1px;
+                }
+               }
+            }
+
+        }
+
 
     }
 
